# sensorFusion

./: .gitignore  CryptoMng.cpp  CryptoMng.h  HTTPClient.cpp  HTTPClient.h  HTTPConnection.cpp  HTTPConnection.h  HTTPConnectionTypes.h  Logger.h  README.md  main.c  main_lwip_https.c  release-notes.md  version.txt
.github/workflows/: cicd-pipeline.yml  version-check.yml
Common/: TaskManager.h  platform_config.h
Communication/: CanController.cpp  CanController.h  CommunicationManager.h
Connection/: ConnectionSettings.h  CryptoMng.h  HTTPClient.h  HTTPConnection.h  ServerManager.cpp  ServerManager.h
HTTPS/: .cproject  .gitignore  .project  HTTPS.prj
HTTPS/include/: ProjectExceptions.h
HTTPS/src/: main.c
HTTPS_system/: .cproject  .project  HTTPS_system.sprj
HWFile/: ZyboZ7_design_wrapper.bit  ZyboZ7_design_wrapper.xsa  design_1_wrapper.xsa  design_1_wrapper_i2c.xsa  ps7_init.tcl
SensorFusion/: .cproject  .gitignore  .project  SensorFusion.prj
SensorFusion/include/: Definitions.h  KeyPadStateEnum.h  MotorChannelsEnum.h  TestInclude.h
SensorFusion/src/: lscript.ld  main.c  main.cpp
SensorFusion/src/business_logic/Image3DProjector/tests/: CMakeLists.txt  build_test.sh  installGtest.sh  runtest.sh  test_CartesianLidarPoint.cpp  test_cartesian  test_image3D.cpp  test_image3d
SensorFusion_system/: .cproject  .gitignore  .project  SensorFusion_system.sprj
scripts/: CommunicationIntegracionTest.py  CommunicationMasterNodeSimulator.py  GarminLiteV3Simulator.ino  PWMMonitor.ino  executionTime.md  export.gdb  generate-platform.tcl
(+298 files in other folders)
